<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/avatar_description" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/yearTextView"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/full_name_placeholder" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/year_placeholder"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/descriptionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/fullNameTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/description_placeholder"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="3"
            app:layout_constraintBottom_toTopOf="@id/genderTextView"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/yearTextView"
            />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/gender_placeholder" />

        <Button
            android:id="@+id/likeButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/like_button_description"
            android:text="Лайк"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>